Bug 906282 - Replace pref observer with var cache and remove nsIObserver inheritance. r=bz